<resources>
    <string name="app_name">Story App</string>
    <string name="login">Login Now</string>
    <string name="create_account">Create New Account</string>
    <string name="image_welcome_desc">Welcome Image</string>
    <string name="welcome_header">Welcome</string>
    <string name="welcome_title">Application for sharing stories that allows users to take photos and share the photo with a caption.</string>
    <string name="login_header">Login</string>
    <string name="image_login_desc">Login Images</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="no_account">Didn\'t have an account yet?</string>
    <string name="signup_here">Register here</string>
    <string name="signup_header">Create New Account</string>
    <string name="image_signup_desc">SignUp Images</string>
    <string name="name">Name</string>
    <string name="signup_btn">Create Account</string>
    <string name="logout_btn">Logout</string>
    <string name="have_account">Already have an account?</string>
    <string name="login_now">Login here</string>
    <string name="input_email">Input email</string>
    <string name="input_password">Input password</string>
    <string name="login_success">Login success</string>
    <string name="signup_success">Registration success</string>
    <string name="input_name">Input name</string>
    <string name="story_image_desc">Story Images</string>
    <string name="story_caption">Story Caption</string>


    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="instance_failed">Instance failed</string>
    <string name="language_setting">Language Setting</string>
    <string name="write_caption">Write a caption</string>
    <string name="fab_new_story">new story button</string>
    <string name="invalid_email">Email address is not valid!</string>
    <string name="password_cant_be_less">Passwords must be at least 6 characters</string>
    <string name="new_story_bar">New Story</string>
    <string name="date_dummy">JULI 07, 2022</string>
    <string name="story_uploaded">Story uploaded</string>
    <string name="story_upload_failed">Story upload failed</string>
    <string name="select_an_image">Please select an image</string>
    <string name="fill_caption">Please fill the caption field</string>
    <string name="no_permission">Not getting permission.</string>
    <string name="retry">Try again</string>
    <string name="timeout">Timeout</string>
    <string name="maps">Maps</string>
    <string name="maps_custom_type" translatable="false">Custom Style</string>
    <string name="maps_satellite_type" translatable="false">Satellite</string>
    <string name="maps_terrain_type" translatable="false">Terrain</string>
    <string name="maps_hybrid_type" translatable="false">Hybrid</string>
    <string name="title_logout">Logout</string>
    <string name="supporting_text_logout">Are you sure you want to Logout?</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Yes</string>
</resources>